# nuestra-historia

./: .env.example  .gitignore  DEPLOY.md  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: apps.py  models.py  serializers.py  urls.py  views.py
api/management/commands/: seed_users.py
api/migrations/: 0001_initial.py
backend/: Dockerfile  requirements.txt
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  entries.py  images.py  users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js  entries.js  users.js
frontend/src/components/: EditEntryModal.jsx  EditEntryModalGuided.jsx  EditEntryModalSimple.jsx  Navbar.jsx  NewEntryModal.jsx  NewEntryModalGuided.jsx  NewEntryModalSimple.jsx  ProtectedRoute.jsx  WriteMyParagraph.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: BlogEntry.jsx  Home.jsx  Login.jsx
nuestra_historia/: settings.py  urls.py  wsgi.py
