[tool.poetry]
name = "nuestra-historia"
version = "0.1.0"
description = ""
authors = ["Joaquin Hernandez Martinez <proyecto_noether@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^9.0.3"
django = "^6.0.5"
whitenoise = "^6.12.0"
dotenv = "^0.9.9"
djangorestframework = "^3.17.1"
djangorestframework-simplejwt = "^5.5.1"
django-cors-headers = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
